[gd_scene load_steps=2 format=3 uid="uid://carried_resources_display"]

[ext_resource type="Script" path="res://ui/CarriedResourcesDisplay.gd" id="1_script"]

[node name="CarriedResourcesDisplay" type="Control"]
layout_mode = 1
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 20.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4

[node name="WoodLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.6, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "Odun: 0"
horizontal_alignment = 1

[node name="StoneLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 14
text = "Ta≈ü: 0"
horizontal_alignment = 1

[node name="WaterLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 14
text = "Su: 0"
horizontal_alignment = 1

[node name="FoodLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "Yemek: 0"
horizontal_alignment = 1

